Interpolated console.log()

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
 		console.log('hello');
 
 		// Interpolated
+		console.log('Hello I am a %s string!', 'Some text' );
+		let text = 'Var text';
+		console.log(`Hello I am a ${text} string!`);
 
 		// Styled
 
