--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 		console.log(`Hello I am a ${text} string!`);
 
 		// Styled
+		console.log('%c I am some great text', 'font-size: 50px; background: red; text-shadow: 10px 10px 0 blue;');
 
 		// warning!
 
