--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 		console.info('Info log');
 
 		// Testing
+		const p = document.querySelector('p');
+		console.assert(p.classList.contains('ouch'), 'That is wrong!');
 
 		// clearing
 
