--- a/index.html
+++ b/index.html
@@ -48,7 +48,17 @@
 		console.log(p);
 		console.dir(p);
 
+		console.clear();
 		// Grouping together
+		dogs.forEach( dog => {
+			console.group(`${dog.name}`); // or .groupCollapsed
+
+			console.log(`This is ${dog.name}`);
+			console.log(`${dog.name} is ${dog.age} years old`);
+			console.log(`${dog.name} is ${dog.age*7} dog years old`);
+
+			console.groupEnd(`${dog.name}`);
+		});
 
 		// counting
 
