--- a/index.html
+++ b/index.html
@@ -61,6 +61,13 @@
 		});
 
 		// counting
+		console.count('Wes');
+		console.count('Wes');
+		console.count('Wes');
+		console.count('Steve');
+		console.count('Wes');
+		console.count('Wes');
+		console.count('Steve');
 
 		// timing
 
