--- a/index.html
+++ b/index.html
@@ -70,6 +70,13 @@
 		console.count('Steve');
 
 		// timing
+		console.time('fetching data');
+		fetch('https://api.github.com/users/wesbos')
+			.then(data => data.json())
+			.then(data => {
+				console.timeEnd('fetching data');
+				console.log(data);
+			});
 
 	</script>
 </body>
